--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "webpack --mode production -p --config ./webpack.config.js"
+    "build": "webpack --mode production -p --config ./webpack.config.js",
+    "build-old": "webpack -p --config ./webpack.old.config.js"
   },
   "author": "",
   "license": "ISC",
@@ -12,7 +13,7 @@
     "babel-loader": "^7.1.4",
     "html-webpack-plugin": "^3.2.0",
     "string-replace-loader": "^2.1.1",
-    "webpack": "^4.8.3",
+    "webpack": "4.8.3",
     "webpack-cli": "^2.1.3"
   },
   "dependencies": {
